--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -10,8 +10,8 @@
   justify-content: space-between;
 }
 .navbar-wagon-title{
-  font-size: 30px;
-  opacity: 0.8;
+  font-size: 30px !important;
+  opacity: 0.8 !important;
 }
 
 /* Right section */
