add js jump tag

--- a/src/components/banner.css
+++ b/src/components/banner.css
@@ -7,6 +7,7 @@
   color: white;
   text-align: center;
   margin-bottom: 15px;
+  background-position: center 100%;
 }
 .landing-banner h1{
   font-size: 80px;
